--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -74,6 +74,12 @@ li {
   font-optical-sizing: auto;
 }
 
+.volkhov-semibold {
+  font-family: "Volkhov", serif;
+  font-weight: 600;
+  font-style: normal;
+  font-optical-sizing: auto;
+}
 .volkhov-bold {
   font-family: "Volkhov", serif;
   font-weight: 700;
@@ -104,7 +110,7 @@ li {
 
 .nav-bar__logo {
   display: flex;
-  flex: 1;
+  flex: 0.35;
 }
 
 .nav-bar__logo > img {
@@ -115,7 +121,7 @@ li {
 
 .nav-bar__logo > h1 {
   margin: 0 10px;
-  color: #181e4b;
+  color: #2a3c52;
 }
 
 .nav-bar__logo > *:hover {
@@ -124,12 +130,14 @@ li {
 
 .nav-bar__menu {
   display: flex;
+  flex: 1;
   align-items: center;
 }
 
 .nav-bar__menu > * {
   margin: 0 10px;
   padding: 5px 10px;
+  color: #1c2a3b;
 }
 
 .nav-bar__menu > *:hover {
@@ -184,9 +192,20 @@ li {
   min-height: 10px;
 }
 
+.create-survey-title-container {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.create-survey-title {
+  font-size: 24px;
+  font-weight: 600;
+  color: #212832;
+}
+
 .survey-container {
   width: 50%;
-  margin: 50px auto;
+  margin: 20px auto;
 }
 
 .header-container {
@@ -544,4 +563,97 @@ input:checked + .slider:before {
 
 .file-type-checkboxes > label :hover {
   cursor: pointer;
+}
+
+/* publish button */
+.publish-btn {
+  all: unset;
+  font-weight: 400;
+  font-size: 15px;
+  padding: 8px 24px;
+  border-radius: 8px;
+  background-color: #37485d;
+  color: #f0f4fd;
+}
+
+.publish-btn:hover {
+  cursor: pointer;
+  background-color: #5b708a;
+}
+
+/* ----------------------------- create survey end------------------------------------------ */
+
+/* Dashboard Styles */
+
+.dashboard-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.dashboard-header {
+  margin-bottom: 20px;
+}
+
+.dashboard-header__title {
+  font-size: 24px;
+  font-weight: 600;
+  color: #212832;
+}
+
+.dashboard-body {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  gap: 20px;
+  width: 100%;
+}
+
+.survey-card {
+  background-color: white;
+  border: 1px solid #d4d7db;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.survey-card-title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #212832;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.survey-card-description {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+  text-align: justify;
+  flex: 1;
+}
+
+.survey-card-responses {
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.survey-card-button {
+  background-color: #37485d;
+  color: #f0f4fd;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.survey-card-button:hover {
+  background-color: #5b708a;
 }
