--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -245,7 +245,6 @@ li {
 }
 
 .nav-bar__user > *:hover {
-  background-color: #f9f7fe;
   cursor: pointer;
 }
 
@@ -767,14 +766,22 @@ input:checked + .slider:before {
   color: #212832;
   margin-bottom: 10px;
   text-align: center;
+  flex: 1;
 }
 
 .survey-card-description {
   font-size: 14px;
   color: #666;
   margin-bottom: 20px;
-  text-align: justify;
-  flex: 1;
+  text-align: center;
+  width: 200px; /* survey card width */
+  height: 105px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  line-clamp: 5;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .survey-card-responses {
