--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -420,10 +420,10 @@ li {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background-image: url("../images/down-arrow-2.png");
+  background-image: url("../images/down-arrow.png");
   background-repeat: no-repeat;
   background-position: right 10px center;
-  background-size: 14px;
+  background-size: 18px;
 }
 
 .answer-type:hover {
